--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
         </article>
     </dialog>
 
+    <!--Modal para Editar-->
+    <dialog id="modal-editar">
+        <article>
+            <header>
+                <a href="#" class="close" id="btn-cerrarEditar"></a>
+                <h3>Editar Integrantes</h3>
+            </header>
+            <form id="frm-editar">
+                <input type="hidden" id="idEditar"> <!--ID del registro por editar-->
+                <input type="text" id="nombreEditar" placeholder="Nombre" required>
+                <input type="text" id="apellidoEditar" placeholder="Apellido" required>
+                <input type="email" id="correoEditar" placeholder="Correo electrónico" required>
+                <input type="number" id="edadEditar" placeholder="Edad" required>
+                <button type="submit" class="contrast">Guardar</button>
+            </form>
+        </article>
+    </dialog>
+
     <!--Botón flotante para agregar registros-->
     <button class="add-button" id="btn-abrirModal" title="Agregar Integrante">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round-plus-icon lucide-user-round-plus"><path d="M2 21a8 8 0 0 1 13.292-6"/><circle cx="10" cy="8" r="5"/><path d="M19 16v6"/><path d="M22 19h-6"/></svg>
